--- a/ninja/ninja.html
+++ b/ninja/ninja.html
@@ -56,7 +56,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ninja</title>
 </head>
 
 <body>
